--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Hi</title>
 </head>
+
 <body>
-	<h1>Hello.</h1>
+	<h1>Sean's File</h1>
 </body>
+
 </html>
