--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-	<h1>Sean's File</h1>
+	<h1>This is not a cat gif</h1>
+	<img src="http://www.catgifpage.com/ginger-is-ready">
 </body>
 
 </html>
