--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Erty's File</h1>
 	<h3>This is not a cat gif</h3>
-	<img src="http://www.catgifpage.com/ginger-is-ready">
+	<img src="http://www.doggifpage.com/gifs/144.gif">
 </body>
 
 </html>
