Fix animal name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Erty's File</h1>
-	<h3>This is not a cat gif</h3>
+	<h3>This is not a dog gif</h3>
 	<img src="http://www.doggifpage.com/gifs/144.gif">
 </body>
 
